# phu-compressor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  copilot-instructions.md
.github/agents/: CppImplWithCmakeAgent.agent.md
.github/workflows/: build.yml  release.yml
docs/: LINUX_BUILD.md
lib/: CMakeLists.txt
lib/audio/: AudioSampleFifo.h  BeatSyncBuffer.h  BucketSet.h  PacketFifo.h  PpqRingBuffer.h  RmsPacketFifo.h
lib/events/: Event.h  EventSource.h  SyncGlobals.h  SyncGlobalsListener.h
scripts/: build.bat  release.bat
src/: CMakeLists.txt  CompressorDisplay.cpp  CompressorDisplay.h  CompressorStage.h  OttCompressor.h  PluginConstants.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VolumeDetector.h
